--- a/requirements.txt
+++ b/requirements.txt
@@ -134,7 +134,9 @@ pyparsing==3.1.2
 pytest==8.2.1
     # via -r requirements.in
 python-dotenv==1.0.1
-    # via uvicorn
+    # via
+    #   -r requirements.in
+    #   uvicorn
 python-multipart==0.0.9
     # via fastapi
 pyyaml==6.0.1
